# starquake

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml
server/: .dockerignore  Cargo.toml  Dockerfile
server/data/geonames/: NOTICE
server/migrations/: 0001_init.sql
server/src/: config.rs  db.rs  enrich.rs  geocode.rs  ingest.rs  locate.rs  main.rs  state.rs  ws.rs
ui/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: BarRace.tsx  Chart.tsx  EventLog.tsx  Globe.tsx  HoverCard.tsx  LeaderboardList.tsx  TopBar.tsx  TopicCloud.tsx
ui/hooks/: useHistory.ts  useLeaderboard.ts
ui/lib/: api.ts  types.ts
